# SnakePlusPlus

./: CMakeLists.txt  README.md  cmake_build.sh  compile.sh  run.sh
includes/: Apple.hpp  Display.hpp  Entity.hpp  Game.hpp  Player.hpp
src/: Apple.cpp  Display.cpp  Entity.cpp  Game.cpp  Player.cpp  main.cpp
